test/sema/typeck/binop/array-compound-assign-mismatch.dora
struct Foo(Int)

impl std::traits::IndexGet for Foo {
    type Index = Int;
    type Item = Float64;

    fn get(index: Int): Float64 { 0.0 }
}

impl std::traits::IndexSet for Foo {
    type Index = Int;
    type Item = Float32;

    fn set(index: Int, value: Float32) {}
}

fn f(array: Foo, value: Float64) {
    array(99) += value;
}
